# flask-react-webapp

./: .gitignore  .tool-versions  README.md  pyproject.toml  taskfile.yml
backend/: main.py  models.py  taskfile.yml
frontend/: taskfile.yml
frontend/src/: App.css  App.jsx  ContactForm.jsx  ContactList.jsx  index.css
