[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Caleb Crouse <calebcrouse1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-sqlalchemy = "^3.1.1"
flask = "^3.1.0"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
