[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Caleb Crouse <calebcrouse1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-sqlalchemy = "^3.1.1"
flask = "^3.1.0"
flask-cors = "^5.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.12.0"
mypy = "^1.10.1"
pyright = "^1.1.369"
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
